# pitman

./: Makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
pitman/: __init__.py  __main__.py  documents.py  settings.py  utils.py
tests/: test_documents.py
