[tool.poetry]
name = "pitman"
version = "0.1.1"
description = "Simple utility to extract text data from URLs, including translation, noun phrase extraction, translation, etc. using requests, TextBlob and readability-lxml."
authors = ["Massimo Scamarcia <massimo.scamarcia@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
cached-property = "^1.5.2"
readability-lxml = "^0.8.1"
requests = "^2.31.0"
textblob = "^0.17.1"
url-normalize = "^1.4.3"
nh3 = "^0.2.14"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
mccabe = "^0.7.0"
pycodestyle = "^2.11.0"
pyflakes = "^3.1.0"
pytest = "^7.4.0"
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
